# conjuration

./: CMakeLists.txt  conjuration.h  diy.cpp  diy.h  service.cpp  service_daemon.cpp  service_ipc_client.cpp  service_ipc_client.h  service_ipc_server.cpp  service_ipc_server.h  test.cpp
